--- a/index_50.html
+++ b/index_50.html
@@ -35,7 +35,7 @@
 	function init(){
         scene = new THREE.Scene()
         
-		renderer = new THREE.WebGLRenderer({ antialias: true, alpha: true, canvas: canvas})
+		renderer = new THREE.WebGLRenderer({antialias: true, alpha: true, canvas: canvas})
 		renderer.setSize(width, height)
 		renderer.setClearColor(0x000000)
         renderer.setClearAlpha(0.0)
@@ -55,7 +55,7 @@
 
     function particleObject(){
         let particle = {
-            count: 400,
+            count: 500,
             size: 0.075,
             segments: 32,
             opacity: 0.5
@@ -63,7 +63,7 @@
         for(let i = 0; i < particle.count; i++){
             let degree = {x: Math.random() * 45, y: Math.random() * 45}
             let cos = Math.cos(degree.x * radian), sin = Math.sin(degree.y * radian)
-            let velocity = {x: (cos + sin) * Math.random() * 0.1 + 0.1, y:-(Math.random() * 0.05 + 0.05)}
+            let velocity = {x: (cos + sin) * Math.random() * 0.1 + 0.1, y: -(Math.random() * 0.05 + 0.05)}
 
             let geometry = new THREE.CircleGeometry(particle.size, particle.segments);
             let material = new THREE.MeshBasicMaterial({
@@ -112,7 +112,7 @@
             if(e.position.x >= vWidth) e.position.x = -vWidth
             if(e.position.y <= -vHeight) e.position.y = vHeight
 
-            e.geometry.verticesNeedUpdate = true;
+            e.geometry.verticesNeedUpdate = true
         })
     }
 
