--- a/index_50.html
+++ b/index_50.html
@@ -93,7 +93,7 @@
         return Math.random() * range * 2 - range
     }
 
-    function getRandomWidth(depth, i){
+    function getRandomWidth(depth){
         let x = getVisibleWidth(depth) * 0.5
         return Math.random() * x * 2 - x
     }
